[BLC-691] Close button was clipped, now fixed

--- a/admin/src/main/webapp/admin/resources/css/admin.css
+++ b/admin/src/main/webapp/admin/resources/css/admin.css
@@ -131,6 +131,8 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     margin-bottom: 0;
 }
 
+.windowHeader img {vertical-align: top;}
+
 /*============================= Catalog -> Offers =============================*/
 /*===============================================================================*/
 
